# guardian_ai_desktop

./: CMakeLists.txt  README.md  launch.json  tasks.json
src/: main.cpp
